--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ rvm:
 cache: bundler
 sudo: false
 
+bundler_args: --jobs=3 --retry=3 --without development production
+
 before_script:
-  - bundle exec rake db:create:all
-  - bundle exec rake db:schema:load
-  - bundle exec rake db:migrate
-  - bundle exec rake db:test:prepare
+  - bundle exec rake db:create db:migrate db:test:prepare
 
 script:
+  - bundle exec rails rubocop
   - bundle exec rails test
-  - bundle exec rake rubocop
